tests/ui/closures/deduce-signature/higher-ranked-alias-norm-to-hr.current_ambig.stderr
error: implementation of `Foo` is not general enough
  --> $DIR/higher-ranked-alias-norm-to-hr.rs:23:5
   |
LL |     needs_super(|_| {});
   |     ^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `{closure@$DIR/higher-ranked-alias-norm-to-hr.rs:23:17: 23:20}` must implement `Foo<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `Foo<'1>`, for some specific lifetime `'1`

error: implementation of `Fn` is not general enough
  --> $DIR/higher-ranked-alias-norm-to-hr.rs:23:5
   |
LL |     needs_super(|_| {});
   |     ^^^^^^^^^^^^^^^^^^^ implementation of `Fn` is not general enough
   |
   = note: closure with signature `fn(&'2 u32)` must implement `Fn<(&'1 u32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `Fn<(&'2 u32,)>`, for some specific lifetime `'2`

error: implementation of `Foo` is not general enough
  --> $DIR/higher-ranked-alias-norm-to-hr.rs:23:5
   |
LL |     needs_super(|_| {});
   |     ^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `{closure@$DIR/higher-ranked-alias-norm-to-hr.rs:23:17: 23:20}` must implement `Foo<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `Foo<'1>`, for some specific lifetime `'1`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: implementation of `FnOnce` is not general enough
  --> $DIR/higher-ranked-alias-norm-to-hr.rs:23:5
   |
LL |     needs_super(|_| {});
   |     ^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'2 u32)` must implement `FnOnce<(&'1 u32,)>`, for any lifetime `'1`...
   = note: ...but it actually implements `FnOnce<(&'2 u32,)>`, for some specific lifetime `'2`

error: implementation of `Foo` is not general enough
  --> $DIR/higher-ranked-alias-norm-to-hr.rs:23:5
   |
LL |     needs_super(|_| {});
   |     ^^^^^^^^^^^^^^^^^^^ implementation of `Foo` is not general enough
   |
   = note: `{closure@$DIR/higher-ranked-alias-norm-to-hr.rs:23:17: 23:20}` must implement `Foo<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `Foo<'1>`, for some specific lifetime `'1`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 5 previous errors

